Tue Dec 15 13:50:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_oct): [DOC] mention radix indicators.
	  [ruby-core:71310] [Bug #11648]

Tue Dec 15 12:20:30 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* lib/erb.rb: Simplify regexp to optimize erb scanner.
	  [fix GH-1144]

Tue Dec 15 11:56:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/uri/common.rb: make code block for rdoc.
	  [ci skip][fix GH-1152] Patch by @Tonkpils

Tue Dec 15 11:55:08 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/zlib/zlib.c: fix a typo.
	  [ci skip][fix GH-1149] Patch by @crismali

Tue Dec 15 09:14:14 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* tool/transcode_tablegen.rb: detailed documentation
	  for transcode_tblgen function [ci skip]

Mon Dec 14 22:11:11 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/ebcdic.h: new dummy encoding EBCDIC-US
	* enc/trans/ebcdic.trans: transcodings between EBCDIC-US
	  and iso-8859-1 [with code from Andrea Ribuoli]
	* test/ruby/test_transcode.rb: tests for above
	* tool/transcode_tablegen.rb: additional argument for
	  method transcode_tblgen

Mon Dec 14 17:04:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/socket/lib/socket.rb: use safe navigation operator.
	  [fix GH-1142] Patch by @mlarraz
	* lib/drb/extservm.rb: ditto.
	* lib/net/http.rb: ditto.
	* lib/net/http/response.rb: ditto.
	* lib/scanf.rb: ditto.
	* lib/uri/generic.rb: ditto.

Mon Dec 14 17:03:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* bootstraptest/runner.rb: use safe navigation operator.
	  [fix GH-1142] Patch by @mlarraz
	* test/openssl/test_pair.rb: ditto.
	* test/ruby/test_econv.rb: ditto.
	* test/ruby/test_settracefunc.rb: ditto.
	* test/thread/test_queue.rb: ditto.

Mon Dec 14 14:33:35 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/xmlrpc.rb: added documentation for parser details.
	  [ci skip][fix GH-1124] Patch by @jrafanie

Mon Dec 14 11:46:52 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
