@@ -589,7 +589,7 @@ class ERB
     end
 
     def add_insert_cmd(out, content)
-      out.push("#{@insert_cmd}((#{content}).to_s)")
+      out.push("#{@insert_cmd}((#{content}))")
     end
 
     # Compiles an ERB template into Ruby code.  Returns an array of the code
@@ -834,10 +834,10 @@ class ERB
   # requires the setup of an ERB _compiler_ object.
   #
   def set_eoutvar(compiler, eoutvar = '_erbout')
-    compiler.put_cmd = "#{eoutvar}.concat"
-    compiler.insert_cmd = "#{eoutvar}.concat"
-    compiler.pre_cmd = ["#{eoutvar} = ''"]
-    compiler.post_cmd = ["#{eoutvar}.force_encoding(__ENCODING__)"]
+    compiler.put_cmd = "#{eoutvar}.push"
+    compiler.insert_cmd = "#{eoutvar}.push"
+    compiler.pre_cmd = ["#{eoutvar} = []"]
+    compiler.post_cmd = ["#{eoutvar}.join.force_encoding(__ENCODING__)"]
   end
 
   # Generate results and print them. (see ERB#result)
