@@ -1,3 +1,10 @@
+Tue Dec 15 16:19:26 2015  Takashi Kokubun  <takashikkbn@gmail.com>
+
+	* lib/erb.rb: Render erb with array buffer for function call optimization.
+	  [fix GH-1143]
+	* lib/rdoc/erb_partial.rb: ditto.
+	* template/verconf.h.tmpl: ditto.
+
 Tue Dec 15 13:50:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_oct): [DOC] mention radix indicators.
